--- a/pari-dispari/index.html
+++ b/pari-dispari/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- Main Stylesheets -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Document Name</title>
+    <title>JS Pari e Dispari</title>
 </head>
 <body>
     
